k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovable-main-ingress
  namespace: lovable-core
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - lovable.snapcart.dev
      secretName: lovable-tls

  rules:
    - host: lovable.snapcart.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    - host: www.codingshuttle.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    - host: "*.previews.snapcart.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-me-proxy
                port:
                  number: 80

    - host: api.snapcart.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
