k8s/infra/local-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lovable-main-ingress
  namespace: lovable-core

spec:
  ingressClassName: nginx

  rules:
    - host: lovable.snapcart.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-frontend
                port:
                  number: 80

    - host: api.snapcart.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 80

    - host: "*.previews.snapcart.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lovable-me-proxy
                port:
                  number: 80
